# django_HW

./: .env.example  .gitignore  db.sqlite3  dump.json  pyproject.toml  requirements.txt  temp.py
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  telegram.py  views.py
core/migrations/: 0001_initial.py  0002_review_ai_checked_status.py
static/css/: main.css
static/js/: main.js
templates/: base.html  create_order.html  create_review.html  landing.html  master_list.html  order_detail.html  order_detailed.html  orders.html  orders_list.html  thanks.html
templates/includes/: navbar.html  order_card.html
templates/users/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  profile_detail.html  profile_update_form.html  register.html
users/: forms.py  urls.py  views.py
